# barustenberg

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  SECURITY.md  codecov.yml  deny.toml  flake.nix  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yml  bench.yml  coverage.yml  release.yml  tests_and_checks.yml
barustenberg/: Cargo.toml  README.md
barustenberg-benches/: Cargo.toml
barustenberg-benches/benches/: a_benchmark.rs
barustenberg-wasm/: Cargo.toml  README.md
barustenberg-wasm/src/: lib.rs
barustenberg-wasm/tests/: web.rs
barustenberg/src/: lib.rs  srs_db  transcript.rs
barustenberg/src/common/: max_threads.rs  mod.rs
barustenberg/src/common/crypto/pedersen_hash/: mod.rs
barustenberg/src/crypto/: generator.rs  mod.rs
barustenberg/src/crypto/pedersen/: lookup.rs  mod.rs  pederson.rs  pederson_hash.rs
barustenberg/src/ecc/: fieldext.rs  groupext.rs  mod.rs
barustenberg/src/ecc/curves/: bn254_scalar_multiplication.rs  grumpkin.rs  mod.rs  pairings.rs
barustenberg/src/ecc/curves/bn254/: fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  g1.rs  g2.rs  mod.rs
barustenberg/src/ecc/curves/bn254/scalar_multiplication/: mod.rs  pippenger.rs  runtime_states.rs  scalar_multiplication.rs
barustenberg/src/ecc/fields/: field.rs  field12.rs  field2.rs  field6.rs  mod.rs
barustenberg/src/ecc/groups/: affine_element.rs  element.rs  group.rs  mod.rs  wnaf.rs  wnaf_test.rs
barustenberg/src/ecc/scalar_multiplication/: mod.rs  process_buckets.rs  runtime_states.rs  scalar_multiplication.rs  tests.rs  wnaf.rs
barustenberg/src/numeric/: mod.rs
barustenberg/src/numeric/bitop/: get_msb.rs  mod.rs
barustenberg/src/plonk/: mod.rs
barustenberg/src/plonk/composer/: composer_base.rs  mod.rs  standard_composer.rs
barustenberg/src/plonk/proof-system/: constants.rs  mod.rs
barustenberg/src/plonk/proof_system/: commitment_scheme.rs  commitment_scheme.rs.orig  constants.rs  mod.rs  prover.rs  proving_key.rs  verifier.rs
barustenberg/src/plonk/proof_system/prover/: mod.rs  test.rs
barustenberg/src/plonk/proof_system/public_inputs/: mod.rs
barustenberg/src/plonk/proof_system/types/: mod.rs  polynomial_manifest.rs  program_settings.rs  proof.rs  prover_settings.rs
barustenberg/src/plonk/proof_system/utils/: mod.rs  permutation.rs
barustenberg/src/plonk/proof_system/verification_key/: mod.rs
barustenberg/src/plonk/proof_system/verifier/: mod.rs  test.rs  verifier.rs
barustenberg/src/plonk/proof_system/widgets/: mod.rs  random_widget.rs  transition_widget.rs
barustenberg/src/plonk/proof_system/widgets/random_widgets/: mod.rs  permutation_widget.rs  random_widget.rs
barustenberg/src/plonk/proof_system/widgets/transition_widgets/: arithmetic_widget.rs  containers.rs  getters.rs  mod.rs  transition_widget.rs
barustenberg/src/polynomials/: evaluation_domain.rs  mod.rs  polynomial.rs  polynomial_arithmetic.rs  tests.rs
barustenberg/src/proof_system/: arithmetization.rs  mod.rs  polynomial_store.rs  work_queue.rs
barustenberg/src/srs/: io.rs  mod.rs  tests.rs
barustenberg/src/srs/reference_string/: file_reference_string.rs  mem_reference_string.rs  mod.rs  pippenger_reference_string.rs  reference_string.rs
barustenberg/src/srs_db/: download_ignition.sh
barustenberg/src/test_utils/: mod.rs  rvg.rs
barustenberg/tests/: integration_test.rs
examples/: Cargo.toml
test_list/: list_tests_barretenberg.sh  test_list.csv  test_list_original.txt  test_list_to_csv.py
