[workspace]
members = [
	"examples",
	"barustenberg",
	"barustenberg-benches",
	"barustenberg-wasm",
]
resolver = "2"

# See https://doc.rust-lang.org/cargo/reference/profiles.html for more info.
[profile.release.package.barustenberg-wasm]
# Perform optimizations on all codegen units.
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s" # or 'z' to optimize "aggressively" for size
# Strip debug symbols
# "symbols" issue: https://github.com/rust-lang/rust/issues/93294
## strip = "debuginfo"
# Amount of debug information.
# 0/false: no debug info at all; 1: line tables only; 2/true: full debug info
## debug = false

# Speedup build on macOS
# See https://blog.rust-lang.org/2021/03/25/Rust-1.51.0.html#splitting-debug-information
[profile.dev]
split-debuginfo = "unpacked"
