[package]
name = "barustenberg-benches"
version = "0.1.0"
publish = false
edition = "2021"
authors = ["Claudia Richoux <c@laudiacay.cool>"]

[dependencies]
barustenberg = { path = "../barustenberg", version = "0.1", features = ["test_utils"] }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "a_benchmark"
harness = false
