[package]
name = "barustenberg"
version = "0.1.0"
description = "barretenberg in rust"
keywords = []
categories = []
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/barustenberg"
repository = "https://github.com/laudiacay/barustenberg/tree/main/barustenberg"
authors = ["Claudia Richoux <c@laudiacay.cool>"]

[lib]
path = "src/lib.rs"

[dependencies]
proptest = { version = "1.1", optional = true }
thiserror = "1.0"
tracing = "0.1"
num_cpus = "1.13.0"
lazy_static = "1.4"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
typenum = "1.13"
generic-array = "0.14.7"
anyhow = "1.0"
# ark-ff = "0.4.2"
# ark-bn254 = "0.4.0"
# ark-poly = "0.4.2"
rand = "0.8.5"
primitive-types = "0.12.1"
[dev-dependencies]
proptest = "1.1"

[features]
default = []
test_utils = ["proptest"]
multithreading = []

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
