[package]
name = "barustenberg"
version = "0.1.0"
description = "barretenberg in rust"
keywords = []
categories = []
include = ["/src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "Apache-2.0 or MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.64"
documentation = "https://docs.rs/barustenberg"
repository = "https://github.com/laudiacay/barustenberg/tree/main/barustenberg"
authors = [
	"Claudia Richoux <c@laudiacay.cool>, Waylon Jepsen <waylonjepsen1@gmail.com>",
]

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-serialize = "0.4.2"
byteorder = "1.4.3"
generic-array = "0.14.7"
grumpkin = { git = "https://github.com/noir-lang/grumpkin.git" }
lazy_static = "1.4"
num_cpus = "1.13.0"
once_cell = "1.17.2"
primitive-types = "0.12.1"
proptest = { version = "1.1", optional = true }
rand = "0.8.5"
rayon = "1.5.1"
sha3 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
typenum = "1.13"
ff = { version = "0.13.0", features = ["alloc"] }
either = "1.8.1"
num-bigint = "0.4.3"

[dev-dependencies]
proptest = "1.1"

[features]
default = []
test_utils = ["proptest"]
multithreading = []

[package.metadata.docs.rs]
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
